fix willkommen alignment

--- a/iamaa/static/home.css
+++ b/iamaa/static/home.css
@@ -227,7 +227,7 @@ img {
 
 	top: 30%;
 	left: 9.5%;
-	width: 100%;
+	width: calc(100% - 4rem);
 	height: 100%;
 	margin: 0;
 	background: url(img/willkommen.png) no-repeat;
